--- a/files/cv/mpsmcv.tex
+++ b/files/cv/mpsmcv.tex
@@ -78,11 +78,12 @@
 		\multicolumn{2}{l}{\textbf{Referee}:  \, Journal of Banking \& Finance, Journal of Macroeconomics, Finance Research } \\
 		& \vspace{-0.1cm} Letters, Mexican J. of Econ. \& Finan., Estudios Económicos, Sobre México. \\
 %		\multicolumn{2}{l}{\textbf{Instructor}: Financial Markets \& Institutions, School of Physics \& Mathematics, IPN (FA 2023).} \\
-		\multicolumn{2}{l}{\textbf{Teaching}: Econometrics, Economics \& Business Dept., Anáhuac University (SP 2024).} \\
+		\multicolumn{2}{l}{\textbf{Teaching}: Econometrics, Econ. \& Business Dept., Anáhuac University (SP 2025, SP 2024).} \\
+%		Econometrics, Economics \& Business Dept., Anáhuac University (SP 2024).} \\
 		 & Elements of Macroeconomics, Johns Hopkins University (SU 2019, SU 2018). \\
 		\qquad \qquad \, & Macroeconomics, School of Physics \& Mathematics, IPN (SP 2012, FA 2010). \\
 		\multicolumn{2}{l}{\textbf{Teaching Assistant}: Computational Methods (Grad.), Financial Markets \& Institutions,} \\
-		& \multirow{1}{14cm}{Econometrics, International Monetary Economics, Monetary Analysis, Macro Strategies, Finance \& Macroeconomy, Economics for Decision Making.} \\ %Elements of Macroeconomics, Economics of Transition \& Institutional Change
+		& \multirow{1}{14cm}{Econometrics, International Monetary Economics, Monetary Analysis, Macro Strategies, Economics for Decision Making, Elements of Macroeconomics.} \\ %Economics of Transition \& Institutional Change, Finance \& the Macroeconomy, 
 		& \\ %& \\
 %		\multicolumn{2}{l}{\textbf{Certificate} from the Johns Hopkins Teaching Academy, October 2020.} \\
 		
@@ -94,6 +95,7 @@
 	\section{Publications} 
 	\vsect
 	\begin{itemize}[label={},itemindent=-2em,leftmargin=2em,noitemsep,topsep=0pt]
+		\item ``Term Premia and Credit Risk in Emerging Markets: The Role of U.S. Monetary Policy," \textit{Journal of International Economics}, 2025 (forthcoming).
 		\item ``Does the Exchange Rate Respond to Monetary Policy in Mexico? Solving an Exchange Rate Puzzle in Emerging Markets," \textit{Journal of Money, Credit and Banking}, 2023, 55 (8). %, 2093--2113
 		\item ``Do Central Bank Words Matter in Emerging Markets? Evidence from Mexico," \textit{Journal of Macroeconomics}, 2023, 78, 103570.
 		\item ``The Impact of Macroeconomic Surprises from Mexico and the U.S. on the Mexican Stock Market,” with Rodolfo Cermeño Bazán, \textit{Economía Mexicana}, 35-67, 2012. [In Spanish]
@@ -105,7 +107,6 @@
 	\section{Working Papers}
 	\vsect
 	\begin{itemize}[label={},itemindent=-2em,leftmargin=2em,noitemsep,topsep=0pt]
-		\item ``Term Premia and Credit Risk in Emerging Markets: The Role of U.S. Monetary Policy," R\&R in \textit{Journal of International Economics}. %, 2025, XX, XX.
 	\item ``Do Banks Hedge Their Return on Assets from Monetary Policy Shocks?" 2019.
 	\item ``Stock Returns and the Drivers of Portfolio Equity Flows in Emerging Markets," 2019.
 	\item ``The Structure of the Mexican Interbank Market,” 2013.
@@ -146,7 +147,7 @@
 	\end{tabular}
 	\medskip
 	
-	\vspace{1cm}
+	\vspace{2cm}
 	\hspace*{\fill} Last updated: \monthyeardate\today .
 	
 %	\hspace*{\fill} \url{https://pavelsolis.github.io}
