--- a/files/cv/mpsmcv.tex
+++ b/files/cv/mpsmcv.tex
@@ -78,13 +78,14 @@
 		\multicolumn{2}{l}{\textbf{Referee}:  \, Journal of Banking \& Finance, Journal of Macroeconomics, Finance Research } \\
 		& \vspace{-0.1cm} Letters, Mexican J. of Econ. \& Finan., Estudios Económicos, Sobre México. \\
 %		\multicolumn{2}{l}{\textbf{Instructor}: Financial Markets \& Institutions, School of Physics \& Mathematics, IPN (FA 2023).} \\
-		\multicolumn{2}{l}{\textbf{Teaching}: Econometrics, Econ. \& Business Dept., Anáhuac University (SP 2025, SP 2024).} \\
+		\multicolumn{2}{l}{\textbf{Teaching}: Econometrics, Anáhuac University (SP 2025, SP 2024).} \\ %Econ. \& Business Dept., 
+		& Advanced Macroeconomics, CIDE (SP 2025). \\ %Economics Dept.
 %		Econometrics, Economics \& Business Dept., Anáhuac University (SP 2024).} \\
 		 & Elements of Macroeconomics, Johns Hopkins University (SU 2019, SU 2018). \\
-		\qquad \qquad \, & Macroeconomics, School of Physics \& Mathematics, IPN (SP 2012, FA 2010). \\
+		\qquad \qquad \, & Macroeconomics, IPN (SP 2012, FA 2010). \\ %School of Physics \& Mathematics, 
 		\multicolumn{2}{l}{\textbf{Teaching Assistant}: Computational Methods (Grad.), Financial Markets \& Institutions,} \\
-		& \multirow{1}{14cm}{Econometrics, International Monetary Economics, Monetary Analysis, Macro Strategies, Economics for Decision Making, Elements of Macroeconomics.} \\ %Economics of Transition \& Institutional Change, Finance \& the Macroeconomy, 
-		& \\ %& \\
+		& \multirow{1}{14cm}{International Monetary Economics, Monetary Analysis, Macro Strategies.} \\ %Econometrics, Elements of Macroeconomics, Economics for Decision Making, Economics of Transition \& Institutional Change, Finance \& the Macroeconomy, 
+%		& \\ %& \\
 %		\multicolumn{2}{l}{\textbf{Certificate} from the Johns Hopkins Teaching Academy, October 2020.} \\
 		
 %		Teaching Assistant for Financial Markets and Institutions (Prof. Jonathan Wright) - Fall 2020, Macroeconomic Strategies (Prof. Robert J. Barbera) - Spring 2020, Econometrics (Prof. Husein) - Spring/Fall 2019, Economics for Decision Making (Prof. Shweta Gaonkar) - Fall 2018/19, International Monetary Economics (Prof. Olivier Jeanne, Prof. Ludmila Poliakova) - Spring 2018/2021, Monetary Analysis (Prof. Ludmila Poliakova) - Fall 2017, Computational Methods (Prof. Christopher D. Carroll) - Spring 2017, Finance and Macroeconomy (Prof. Jon Faust) - Spring 2017, Elements of Macroeconomics (Prof. Robert J. Barbera) - Fall 2016/18
@@ -107,7 +108,8 @@
 	\section{Working Papers}
 	\vsect
 	\begin{itemize}[label={},itemindent=-2em,leftmargin=2em,noitemsep,topsep=0pt]
-	\item ``Do Banks Hedge Their Return on Assets from Monetary Policy Shocks?" 2019.
+	\item ``Trade War Spillover: Nearshoring and Banking in Mexico," with A. Bechara, H. Lee, R. Paluszynski and L. Salinas, 2025.
+	\item ``Do Banks Hedge Their Return on Assets from Monetary Policy Shocks?," 2019.
 	\item ``Stock Returns and the Drivers of Portfolio Equity Flows in Emerging Markets," 2019.
 	\item ``The Structure of the Mexican Interbank Market,” 2013.
 	\end{itemize}
@@ -147,7 +149,7 @@
 	\end{tabular}
 	\medskip
 	
-	\vspace{2cm}
+	\vspace{1cm}
 	\hspace*{\fill} Last updated: \monthyeardate\today .
 	
 %	\hspace*{\fill} \url{https://pavelsolis.github.io}
