--- a/files/cv/mpsmcv.tex
+++ b/files/cv/mpsmcv.tex
@@ -96,7 +96,7 @@
 	\section{Publications} 
 	\vsect
 	\begin{itemize}[label={},itemindent=-2em,leftmargin=2em,noitemsep,topsep=0pt]
-		\item ``Term Premia and Credit Risk in Emerging Markets: The Role of U.S. Monetary Policy," \textit{Journal of International Economics}, 2025 (forthcoming).
+		\item ``Term Premia and Credit Risk in Emerging Markets: The Role of U.S. Monetary Policy," \textit{Journal of International Economics}, 2025, 104045.
 		\item ``Does the Exchange Rate Respond to Monetary Policy in Mexico? Solving an Exchange Rate Puzzle in Emerging Markets," \textit{Journal of Money, Credit and Banking}, 2023, 55 (8). %, 2093--2113
 		\item ``Do Central Bank Words Matter in Emerging Markets? Evidence from Mexico," \textit{Journal of Macroeconomics}, 2023, 78, 103570.
 		\item ``The Impact of Macroeconomic Surprises from Mexico and the U.S. on the Mexican Stock Market,” with Rodolfo Cermeño Bazán, \textit{Economía Mexicana}, 35-67, 2012. [In Spanish]
