--- a/files/cv/mpsmcv.tex
+++ b/files/cv/mpsmcv.tex
@@ -108,7 +108,7 @@
 	\section{Working Papers}
 	\vsect
 	\begin{itemize}[label={},itemindent=-2em,leftmargin=2em,noitemsep,topsep=0pt]
-	\item ``Trade War Spillover: Nearshoring and Banking in Mexico," with A. Bechara, H. Lee, R. Paluszynski and L. Salinas, 2025.
+	\item ``Unlocking Growth in Emerging Economies Amid Trade Wars and Financial Crises," with A. Bechara, H. Lee, R. Paluszynski and L. Salinas, 2025.
 	\item ``Do Banks Hedge Their Return on Assets from Monetary Policy Shocks?," 2019.
 	\item ``Stock Returns and the Drivers of Portfolio Equity Flows in Emerging Markets," 2019.
 	\item ``The Structure of the Mexican Interbank Market,” 2013.
