--- a/files/cv/mpsmcv.tex
+++ b/files/cv/mpsmcv.tex
@@ -78,8 +78,8 @@
 		\multicolumn{2}{l}{\textbf{Referee}:  \, Journal of Banking \& Finance, Journal of Macroeconomics, Finance Research } \\
 		& \vspace{-0.1cm} Letters, Mexican J. of Econ. \& Finan., Estudios Económicos, Sobre México. \\
 %		\multicolumn{2}{l}{\textbf{Instructor}: Financial Markets \& Institutions, School of Physics \& Mathematics, IPN (FA 2023).} \\
-		\multicolumn{2}{l}{\textbf{Teaching}: Econometrics, Anáhuac University (SP 2025, SP 2024).} \\ %Econ. \& Business Dept., 
-		& Advanced Macroeconomics, CIDE (SP 2025). \\ %Economics Dept.
+		\multicolumn{2}{l}{\textbf{Teaching}: Advanced Macroeconomics, CIDE (SP 2025).} \\ %Econ. \& Business Dept., 
+		& Econometrics, Anáhuac University (SP 2025, SP 2024). \\ %Economics Dept.
 %		Econometrics, Economics \& Business Dept., Anáhuac University (SP 2024).} \\
 		 & Elements of Macroeconomics, Johns Hopkins University (SU 2019, SU 2018). \\
 		\qquad \qquad \, & Macroeconomics, IPN (SP 2012, FA 2010). \\ %School of Physics \& Mathematics, 
@@ -119,7 +119,7 @@
 	\section{Presentations} 
 	\vsect
 	\begin{tabular}[l]{ll}
-		2022: & Banco de México. \\
+%		2022: & Banco de México. \\
 		2021: & \multirow{1}{15cm}{Banco de España, Finance Research Letters Virtual Conference, EEA-ESEM Virtual Congress, Banco de México, IPN, Johns Hopkins University.} \\ & \\ %IAAE Annual Conference, 
 		2020: & \multirow{1}{15cm}{Johns Hopkins University, Southern Finance Association Annual Meeting, Loyola University, Carey Business School (Brown Bag), CNBV.} \\ & \\
 		2019: & Banco de México,  Johns Hopkins University. \\
@@ -144,7 +144,7 @@
 	\section{Skills} 
 	\vsect
 	\begin{tabular}[l]{ll}
-		Software: & Matlab, Stata, R, Bloomberg, Git, \LaTeX, Office. \\ %Python, 
+		Software: & Matlab, Stata, Bloomberg, Git, \LaTeX, Office. \\ %R, Python, 
 		Languages: & English (fluent), Spanish (native), French (basic). \\
 	\end{tabular}
 	\medskip
