--- a/files/cv/mpsmcv.tex
+++ b/files/cv/mpsmcv.tex
@@ -21,7 +21,7 @@
 \linespread{1.25}
 \usepackage{fancyhdr}  						  % use fancyhdr package to get 2-line header
 	\renewcommand{\headrulewidth}{0pt} % suppress line drawn by default by fancyhdr
-	\rhead{Pavel Solís}
+	\rhead{Pavel Solís}					% \\ Last update: \monthyeardate\today .
 %\cfoot{}  												% the footer is empty
 %\fancyfoot{\thepage}
 \pagestyle{fancy} 								  % set pagestyle for the document
@@ -76,15 +76,15 @@
 	\vsect
 	\begin{tabular}{l m{15.3cm}}
 		\multicolumn{2}{l}{\textbf{Referee}:  \, Journal of Banking \& Finance, Journal of Macroeconomics, Finance Research } \\
-		& \vspace{-0.1cm} Letters, Mexican J. of Econ. \& Finan., Estudios Económicos, Sobre México. \\
+		& \vspace{-0.1cm} Letters, Discover Analytics, Latin American Economic Review, Revista \\ 
+		& Mexicana de Economía y Finanzas, Estudios Económicos, Sobre México. \\ % Mexican Journal of Economics \& Finance, Mexican J. of Econ. & Finan.
 %		\multicolumn{2}{l}{\textbf{Instructor}: Financial Markets \& Institutions, School of Physics \& Mathematics, IPN (FA 2023).} \\
-		\multicolumn{2}{l}{\textbf{Teaching}: Advanced Macroeconomics, CIDE (SP 2025).} \\ %Econ. \& Business Dept., 
-		& Econometrics, Anáhuac University (SP 2025, SP 2024). \\ %Economics Dept.
+		\multicolumn{2}{l}{\textbf{Teaching}: Advanced Macroeconomics, CIDE (since 2025).} \\ %since SP 2025 %Econ. \& Business Dept., 
+		& Introductory Econometrics, Anáhuac University (since 2024). \\ %since SP 2024 %Economics Dept.
 %		Econometrics, Economics \& Business Dept., Anáhuac University (SP 2024).} \\
 		 & Elements of Macroeconomics, Johns Hopkins University (SU 2019, SU 2018). \\
-		\qquad \qquad \, & Macroeconomics, IPN (SP 2012, FA 2010). \\ %School of Physics \& Mathematics, 
-		\multicolumn{2}{l}{\textbf{Teaching Assistant}: Computational Methods (Grad.), Financial Markets \& Institutions,} \\
-		& \multirow{1}{14cm}{International Monetary Economics, Monetary Analysis, Macro Strategies.} \\ %Econometrics, Elements of Macroeconomics, Economics for Decision Making, Economics of Transition \& Institutional Change, Finance \& the Macroeconomy, 
+		\qquad \qquad \, & Intermediate Macroeconomics, IPN (SP 2012, FA 2010). \\ %School of Physics \& Mathematics, 
+%		\multicolumn{2}{l}{\textbf{Teaching Assistant}: Computational Methods (graduate), several undergraduate courses.} \\ %Financial Markets \& Institutions, International Monetary Economics, Monetary Analysis, Macro Strategies, Econometrics, Elements of Macroeconomics, Economics for Decision Making, Economics of Transition \& Institutional Change, Finance \& the Macroeconomy, 
 %		& \\ %& \\
 %		\multicolumn{2}{l}{\textbf{Certificate} from the Johns Hopkins Teaching Academy, October 2020.} \\
 		
@@ -108,9 +108,12 @@
 	\section{Working Papers}
 	\vsect
 	\begin{itemize}[label={},itemindent=-2em,leftmargin=2em,noitemsep,topsep=0pt]
-	\item ``Trade War Spillover: Nearshoring and Banking in Mexico," with A. Bechara, H. Lee, R. Paluszynski and L. Salinas, 2025.
-	\item ``Do Banks Hedge Their Return on Assets from Monetary Policy Shocks?," 2019.
-	\item ``Stock Returns and the Drivers of Portfolio Equity Flows in Emerging Markets," 2019.
+	\item ``The Nearshoring Boom that Mexico Almost Had," with A. Bechara, H. Lee, R. Paluszynski and L. Salinas, 2026.
+	\item ``The Role of Liquidity and Term Premia in Emerging Bond Markets: Evidence from Mexico," with G. Bush, J. Christensen and E. Fischer, 2026.
+	\item ``Is There a Convenience Yield in Emerging Markets? Evidence from Mexico," with G. Bush and C. López-Castañón, 2026.
+	\item ``Why Credit Supply is Inelastic in Emerging Markets? Evidence from Mexico," with A. Bechara, H. Lee, R. Paluszynski and L. Salinas, 2026.
+%	\item ``Do Banks Hedge Their Return on Assets from Monetary Policy Shocks?," 2019.
+%	\item ``Stock Returns and the Drivers of Portfolio Equity Flows in Emerging Markets," 2019.
 	\item ``The Structure of the Mexican Interbank Market,” 2013.
 	\end{itemize}
 	
@@ -119,11 +122,12 @@
 	\section{Presentations} 
 	\vsect
 	\begin{tabular}[l]{ll}
-%		2022: & Banco de México. \\
+		2025: & Centro de Investigación y Docencia Económicas. \\ % September
+%		2022: & Banco de México, Instituto Politécnico Nacional. \\ % February, September
 		2021: & \multirow{1}{15cm}{Banco de España, Finance Research Letters Virtual Conference, EEA-ESEM Virtual Congress, Banco de México, IPN, Johns Hopkins University.} \\ & \\ %IAAE Annual Conference, 
 		2020: & \multirow{1}{15cm}{Johns Hopkins University, Southern Finance Association Annual Meeting, Loyola University, Carey Business School (Brown Bag), CNBV.} \\ & \\
 		2019: & Banco de México,  Johns Hopkins University. \\
-		2015: & FSB Regional Consultative Group for the Americas, Key Attributes Workshop. \\ % (Bogotá, Colombia). \\
+%		2015: & FSB Regional Consultative Group for the Americas, Key Attributes Workshop. \\ % (Bogotá, Colombia). \\
 %		2014:  & Deutsche Bundesbank, Centre for Technical Central Bank Cooperation. \\ %(Frankfurt, Germany).
 %		2013: & Banco de México. \\
 	\end{tabular}
@@ -144,13 +148,13 @@
 	\section{Skills} 
 	\vsect
 	\begin{tabular}[l]{ll}
-		Software: & Matlab, Stata, Bloomberg, Git, \LaTeX, Office. \\ %R, Python, 
+		Software:  & Matlab, Stata, Bloomberg, Git, \LaTeX, Office. \\ %R, Python, 
 		Languages: & English (fluent), Spanish (native), French (basic). \\
 	\end{tabular}
-	\medskip
 	
-	\vspace{1cm}
-	\hspace*{\fill} Last updated: \monthyeardate\today .
+%	\medskip
+%	\vspace{1cm}
+%	\hspace*{\fill} Last update: \monthyeardate\today .
 	
 %	\hspace*{\fill} \url{https://pavelsolis.github.io}
 	
