--- a/files/cv/mpsmcv.tex
+++ b/files/cv/mpsmcv.tex
@@ -75,9 +75,9 @@
 	\section{Academic Experience} 
 	\vsect
 	\begin{tabular}{l m{15.3cm}}
-		\multicolumn{2}{l}{\textbf{Referee}:  \, Journal of Banking \& Finance, Journal of Macroeconomics, Finance Research } \\
-		& \vspace{-0.1cm} Letters, Discover Analytics, Latin American Economic Review, Revista \\ 
-		& Mexicana de Economía y Finanzas, Estudios Económicos, Sobre México. \\ % Mexican Journal of Economics \& Finance, Mexican J. of Econ. & Finan.
+		\multicolumn{2}{l}{\textbf{Referee}:  \, J. of Money, Credit and Banking; J. of Banking \& Finance; J. of Macroeconomics; } \\
+		& \vspace{-0.1cm} Finance Research Letters; Discover Analytics; Latin American Economic Review; \\ 
+		& Mexican J. of Economics \& Finance; Estudios Económicos; Sobre México. \\ % Mexican Journal of Econ. \& Finan., Revista Mexicana de Economía y Finanzas
 %		\multicolumn{2}{l}{\textbf{Instructor}: Financial Markets \& Institutions, School of Physics \& Mathematics, IPN (FA 2023).} \\
 		\multicolumn{2}{l}{\textbf{Teaching}: Advanced Macroeconomics, CIDE (since 2025).} \\ %since SP 2025 %Econ. \& Business Dept., 
 		& Introductory Econometrics, Anáhuac University (since 2024). \\ %since SP 2024 %Economics Dept.
@@ -110,8 +110,8 @@
 	\begin{itemize}[label={},itemindent=-2em,leftmargin=2em,noitemsep,topsep=0pt]
 	\item ``The Nearshoring Boom that Mexico Almost Had," with A. Bechara, H. Lee, R. Paluszynski and L. Salinas, 2026.
 	\item ``The Role of Liquidity and Term Premia in Emerging Bond Markets: Evidence from Mexico," with G. Bush, J. Christensen and E. Fischer, 2026.
-	\item ``Is There a Convenience Yield in Emerging Markets? Evidence from Mexico," with G. Bush and C. López-Castañón, 2026.
 	\item ``Why Credit Supply is Inelastic in Emerging Markets? Evidence from Mexico," with A. Bechara, H. Lee, R. Paluszynski and L. Salinas, 2026.
+	\item ``Elasticity of Demand for Mexican Sovereign Bonds," with G. Bush and C. López-Castañón, 2026.
 %	\item ``Do Banks Hedge Their Return on Assets from Monetary Policy Shocks?," 2019.
 %	\item ``Stock Returns and the Drivers of Portfolio Equity Flows in Emerging Markets," 2019.
 	\item ``The Structure of the Mexican Interbank Market,” 2013.
